--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.1",
     "@babel/plugin-transform-modules-commonjs": "^7.0.0",
+    "babel-eslint": "^9.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^12.0.0",
