--- a/package.json
+++ b/package.json
@@ -2,25 +2,12 @@
   "name": "fastlib",
   "version": "0.0.1",
   "description": "Faster library for scalable architecture",
-  "main": "./build/index.js",
-  "devDependencies": {
-    "concurrently": "^4.0.1",
-    "jest": "^23.5.0",
-    "nodemon": "^1.9.2",
-    "tsc": "^1.20150623.0",
-    "tslint": "^5.11.0",
-    "typescript": "^3.0.3"
-  },
+  "main": "fastlib.js",
   "scripts": {
-    "start": "./node_modules/.bin/concurrently \"npm run app:watch\" \"npm run dev:watch\" \"npm run node:watch\" ",
-    "app:watch": "./node_modules/.bin/tsc --p ./tsconfig.app.json -w",
-    "dev:watch": "./node_modules/.bin/tsc --p ./tsconfig.dev.json -w",
-    "node:watch": "./node_modules/.bin/nodemon ./build/examples/index.js",
-    "app:build": "./node_modules/.bin/tsc --p ./tsconfig.app.json",
-    "lint": "tslint -c tslint.json **/*.ts",
-    "precommit": "npm run lint",
-    "test": "./node_modules/.bin/jest --coverage",
-    "prepush": "npm run lint && npm run test"
+    "start": "npm run node:watch",
+    "node:watch": "./node_modules/.bin/nodemon fastlib.js",
+    "lint": "./node_modules/.bin/eslint **/*.js --ignore-path .gitignore",
+    "test": "cross-env NODE_ENV=development jest"
   },
   "keywords": [
     "faster",
@@ -30,19 +17,31 @@
   "author": {
     "name": "Joydip Roy",
     "email": "joydipand@gmail.com",
-    "url": "http://github.com/rjoydip"
+    "url": "https://github.com/rjoydip"
   },
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^6.0.73",
-    "fastify": "^1.11.1",
-    "husky": "^1.0.0-rc.13"
+    "fastify": "^1.11.1"
   },
-  "readme": "README.md",
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run precommit",
-      "pre-push": "npm run prepush"
-    }
-  }
+  "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.0.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-react": "^6.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "jest": "^23.5.0",
+    "nodemon": "^1.18.4",
+    "rollup": "^0.64.1",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0"
+  },
+  "readme": "README.md"
 }
