--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+/npm-debug.log
 
 # TypeScript v1 declaration files
 typings/
@@ -59,3 +60,9 @@ typings/
 
 # next.js build output
 .next
+
+# Dist directory
+dist/
+
+# For mac
+.DS_Store
