--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cors": "^2.7.1",
+    "ejs": "^2.5.9",
     "express": "^4.16.3",
     "mixin": "^0.2.0",
     "morgan": "^1.8.0",
