--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.7.1",
     "ejs": "^2.5.9",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mixin": "^0.2.0",
     "morgan": "^1.8.0",
     "resource-router-middleware": "^0.6.0"
