--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-microservice-architecture",
+  "name": "node-project-structure-1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,12 +7,12 @@
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cors": "^2.7.1",
-    "ejs": "^2.5.9",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
+    "marko": "^4.9.7",
     "mixin": "^0.2.0",
-    "morgan": "^1.8.0",
-    "resource-router-middleware": "^0.6.0"
+    "moment": "^2.22.1",
+    "morgan": "^1.8.0"
   },
   "devDependencies": {
     "@core/app": "file:src/core/app",
