--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "fastlib",
   "version": "0.0.1",
-  "description": "Faster library for scalable architecture",
+  "description": "Faster and scalable architecture",
   "main": "fastlib.js",
   "scripts": {
     "start": "npm run node:watch",
     "node:watch": "./node_modules/.bin/nodemon fastlib.js",
-    "lint": "./node_modules/.bin/eslint **/*.js --ignore-path .gitignore",
-    "test": "cross-env NODE_ENV=development jest"
+    "lint": "./node_modules/.bin/eslint **/*.js --ignore-path .gitignore"
   },
   "keywords": [
     "faster",
-    "library",
-    "scalable"
+    "scalable",
+    "architecture"
   ],
   "author": {
     "name": "Joydip Roy",
@@ -25,23 +24,16 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-external-helpers": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.0.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^6.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^3.1.0",
-    "jest": "^23.5.0",
-    "nodemon": "^1.18.4",
-    "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0"
+    "nodemon": "^1.18.4"
   },
   "readme": "README.md"
 }
