--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,82 +1,85 @@
 {
-	"root": true,
-	"extends": [
-		"airbnb-base",
-		"plugin:jest/recommended",
-		"plugin:node/recommended",
-		"plugin:prettier/recommended"
-	],
-	"plugins": [
-		"jest",
-		"node",
-		"prettier"
-	],
-	"rules": {
-		"class-methods-use-this": [
-			"error",
-			{
-				"exceptMethods": [
-					"defaultOptions",
-					"otherCommandConfigs",
-					"requiresGit"
-				]
-			}
-		],
-		"consistent-return": "off",
-		"curly": [
-			"error",
-			"all"
-		],
-		"max-len": [
-			"error",
-			110,
-			2
-		],
-		"no-param-reassign": [
-			"error",
-			{
-				"props": true,
-				"ignorePropertyModificationsFor": [
-					"err",
-					"obj",
-					"pkg"
-				]
-			}
-		],
-		"no-restricted-syntax": [
-			"error",
-			"ForInStatement",
-			"LabeledStatement",
-			"WithStatement"
-		],
-		"no-underscore-dangle": [
-			"error",
-			{
-				"allowAfterThis": true
-			}
-		],
-		"no-use-before-define": [
-			"error",
-			{
-				"functions": false,
-				"classes": false
-			}
-		],
-		"strict": "off"
-	},
-	"overrides": [
-		{
-			"files": [
-				"**/__tests__/**",
-				"**/__mocks__/**",
-				"**/__fixtures__/**"
-			],
-			"rules": {
-				"global-require": "off"
-			},
-			"env": {
-				"jest": true
-			}
-		}
-	]
+  "root": true,
+  "extends": [
+    "airbnb-base",
+    "plugin:jest/recommended",
+    "plugin:node/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "plugins": [
+    "jest",
+    "node",
+    "prettier"
+  ],
+  "rules": {
+    "no-dynamic-require": 0,
+    "class-methods-use-this": [
+      "error",
+      {
+        "exceptMethods": [
+          "defaultOptions",
+          "otherCommandConfigs",
+          "requiresGit"
+        ]
+      }
+    ],
+    "consistent-return": "off",
+    "curly": [
+      "error",
+      "all"
+    ],
+    "max-len": [
+      "error",
+      110,
+      2
+    ],
+    "no-param-reassign": [
+      "error",
+      {
+        "props": true,
+        "ignorePropertyModificationsFor": [
+          "err",
+          "obj",
+          "pkg"
+        ]
+      }
+    ],
+    "no-restricted-syntax": [
+      "error",
+      "ForInStatement",
+      "LabeledStatement",
+      "WithStatement"
+    ],
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allowAfterThis": true
+      }
+    ],
+    "no-use-before-define": [
+      "error",
+      {
+        "functions": false,
+        "classes": false
+      }
+    ],
+    "strict": "off",
+    "node/no-unsupported-features/es-syntax": ["error", {
+      "version": ">=7.6.0",
+      "ignores": []
+    }]
+  },
+  "overrides": [{
+    "files": [
+      "**/__tests__/**",
+      "**/__mocks__/**",
+      "**/__fixtures__/**"
+    ],
+    "rules": {
+      "global-require": "off"
+    },
+    "env": {
+      "jest": true
+    }
+  }]
 }
