--- a/lerna.json
+++ b/lerna.json
@@ -2,17 +2,7 @@
   "lerna": "3.4.0",
   "version": "1.0.0",
   "changelog": {
-    "repo": "fastlib",
-    "cacheDir": ".changelog",
-    "labels": {
-      "PR: Spec Compliancy :eyeglasses:": ":eyeglasses: Spec Compliancy",
-      "PR: Breaking Change :boom:": ":boom: Breaking Change",
-      "PR: New Feature :rocket:": ":rocket: New Feature",
-      "PR: Bug Fix :bug:": ":bug: Bug Fix",
-      "PR: Polish :nail_care:": ":nail_care: Polish",
-      "PR: Docs :memo:": ":memo: Documentation",
-      "PR: Internal :house:": ":house: Internal"
-    }
+    "repo": "fastlib"
   },
   "command": {
     "create": {
@@ -24,6 +14,9 @@
       "conventionalCommits": true,
       "gitRemote": "upstream",
       "message": "chore(release): publish %s"
+    },
+    "bootstrap": {
+      "npmClientArgs": ["--no-package-lock"]
     }
   },
   "ignoreChanges": [
@@ -35,7 +28,8 @@
     "--no-lockfile"
   ],
   "packages": [
-    "packages/*"
+    "core/*",
+    "modules/*"
   ],
   "npmClient": "npm"
 }
