--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "fastlib",
   "version": "1.0.0",
-  "description": "",
+  "description": "Monorepo node project structure with fastify",
   "private": false,
   "scripts": {
-    "add": "./node_modules/.bin/lerna add",
-    "boot": "./node_modules/.bin/lerna bootstrap",
-    "lerna:test": "./node_modules/.bin/lerna run test",
-    "clean": "./node_modules/.bin/lerna clean",
-    "ls": "./node_modules/.bin/lerna ls",
-    "link": "./node_modules/.bin/lerna link",
+    "lerna": "./node_modules/.bin/lerna",
+    "help": "./node_modules/.bin/lerna --help",
     "global": "npm uninstall -g fastlib && npm install -g .",
-    "cleanup": "npm run clean && rm -rf node_modules/ && npm install && npm run boot",
+    "clean": "npm run lerna clean && rm -rf node_modules/ && npm install && npm run lerna bootstrap",
+    "setup": "npm run lerna clean && npm install && npm run lerna bootstrap && npm run lerna link",
     "lint": "eslint . --ignore-path .eslintignore --cache",
-    "test": "cross-env LC_ALL=en_US.UTF-8 NODE_ENV=test jest",
-    "generate": "node scripts/index.js g -p"
+    "test": "cross-env NODE_ENV=test jest",
+    "gen:pkg": "node scripts/index.js g -p",
+    "gen:mod": "node scripts/index.js g -m"
   },
   "bin": {
     "fastlib": "packages/cli/index.js"
@@ -37,5 +35,8 @@
     "jest-circus": "^23.6.0",
     "lerna": "^3.4.0",
     "prettier": "^1.14.2"
+  },
+  "engines": {
+    "node": ">=7.6.0"
   }
 }
