--- a/modules/users/package.json
+++ b/modules/users/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "foo",
+  "name": "users",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo 'Error: no test specified' && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": { }
+  "dependencies": {}
 }
