--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fastlib",
   "version": "1.0.0",
-  "description": "Sclable monorepo based node project structure with fastify",
+  "description": "Scalable monorepo based node project structure with fastify",
   "private": false,
   "scripts": {
     "lerna": "lerna",
