--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "fastlib",
+  "name": "fastimo",
   "version": "1.0.0",
   "description": "Scalable monorepo based node project structure with fastify",
   "private": false,
   "scripts": {
     "lerna": "lerna",
     "help": "lerna --help",
-    "global": "npm uninstall -g fastlib && npm install -g .",
+    "global": "npm uninstall -g fastimo && npm install -g .",
     "clean": "npm run lerna clean && rm -rf node_modules/ && npm install && npm run lerna bootstrap",
     "setup": "npm run lerna clean && npm install && npm run lerna bootstrap && npm run lerna link",
     "lint": "eslint . --ignore-path .eslintignore --cache",
     "test": "cross-env NODE_ENV=test jest",
     "gen:pkg": "node scripts/index.js g -p",
     "gen:mod": "node scripts/index.js g -m",
-    "run:app": "cross-env NODE_ENV=dev node core/fastlib"
+    "app": "cross-env NODE_ENV=dev node core/fastimo"
   },
   "bin": {
-    "fastlib": "packages/cli/index.js"
+    "fastimo": "packages/cli/index.js"
   },
   "dependencies": {
     "common-tags": "^1.8.0",
-    "g": "^2.0.1",
     "nodemon": "^1.18.4",
     "shelljs": "^0.8.2",
     "yargs-parser": "^10.1.0"
@@ -45,13 +44,17 @@
   "main": "jest.config.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rjoydip/fastlib.git"
+    "url": "git+https://github.com/rjoydip/fastimo.git"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Joydip Roy",
+    "email": "joydipand@gmail.com",
+    "url": "https://github.com/rjoydip"
+  },
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/rjoydip/fastlib/issues"
+    "url": "https://github.com/rjoydip/fastimo/issues"
   },
-  "homepage": "https://github.com/rjoydip/fastlib#readme"
+  "homepage": "https://github.com/rjoydip/fastimo#readme"
 }
