--- a/core/render/package.json
+++ b/core/render/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.6.1",
-    "fastify-plugin": "^1.2.1"
+    "fastify-plugin": "^1.2.1",
+    "html-minifier": "^3.5.20"
   }
 }
