--- a/core/config/package.json
+++ b/core/config/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify-plugin": "^1.2.1",
-    "js-yaml": "^3.12.0"
+    "fastify-plugin": "^1.2.1"
   }
 }
