--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "Scalable monorepo based node project structure with fastify",
   "private": false,
+  "main": "core/fastimo",
   "scripts": {
     "lerna": "lerna",
     "help": "lerna --help",
-    "global": "concurrently \"npm uninstall -g fastimo \" && \" npm install -g .\"",
-    "clean": "concurrently \"npm run lerna clean\" && \"rm -rf node_modules/\" && \"npm install\" && \"npm run lerna bootstrap\"",
-    "setup": "concurrently \"npm run lerna clean\" && \"npm install\" && \"npm run lerna bootstrap\" && \"npm run lerna link\"",
+    "global": "npm uninstall -g fastimo && npm install -g .",
+    "clean": "npm run lerna clean && rm -rf node_modules && npm install && npm run lerna bootstrap",
+    "setup": "npm run lerna clean && npm install && npm run lerna bootstrap && npm run lerna link",
     "lint": "eslint . --ignore-path .eslintignore --cache",
     "test": "cross-env NODE_ENV=test jest",
     "gen:pkg": "node scripts/index.js g -p",
@@ -27,7 +28,6 @@
   },
   "devDependencies": {
     "autocannon": "^3.0.0",
-    "concurrently": "^4.0.1",
     "cross-env": "^5.2.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -45,7 +45,6 @@
   "engines": {
     "node": ">=7.6.0"
   },
-  "main": "jest.config.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rjoydip/fastimo.git"
